--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,83 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --body-background: #121217;
+    --white: white;
+    --black: black;
+    --body-text: #b3b3b3;
+    --outline: #2d2d39;
+    --teal-500: #33ffcf;
+}
+
+body {
+    background-color: var(--body-background);
+    color: var(--white);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+  color: var(--white);
+  text-decoration: none;
+  transition: color .4s ease-in-out;
+
+  &:visited {
+    color: var(--white);
+  }
+
+  &:hover {
+    color: var(--teal-500)
+  }
+}
+
+// CSS RESET
+/* makes sizing simpler */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* remove default spacing */
+/* force styling of type through styling, rather than elements */
+
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+/* dark mode user-agent-styles */
+
+/* html {
+  color-scheme: dark light;
+} */
+
+/* min body height */
+
+body {
+  min-height: 100vh;
+}
+
+/* responsive images/videos */
+img,
+picture,
+svg,
+video {
+  display: block;
+  max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
+p,
+li,
+figcaption {
+  max-width: 65ch;
+}
