--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="hero">
+<section id="about" class="hero">
     <app-headline></app-headline>
     <app-description></app-description>
-</div>
+</section>
