--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,21 +1,23 @@
-<ul class="projects">
-    <li class="project-wrapper" *ngFor="let project of projects" (click)="openNewTab(project.url)">
-        <img [src]="project.image" [alt]="project.title +  ' screen capture'" class="thumbnail">
-        <div class="project-text">
-            <h3 class="project-title">
-                <a [href]="project.url" class="project-link" target="_blank">
-                    {{ project.title }} 
-                    <svg class="new-tab" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
-                        <path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/>
-                    </svg>
-                </a>
-            </h3>
-            <p class="project-desc">
-                {{  project.description }}
-            </p>
-            <div class="pill-container" *ngIf="checkTechnologiesArray(project)">
-                <span *ngFor="let tech of project.technologies" class="tech-pill">{{ tech }}</span>
+<section id="projects">
+    <ul class="projects">
+        <li class="project-wrapper" *ngFor="let project of projects" (click)="openNewTab(project.url)">
+            <img [src]="project.image" [alt]="project.title +  ' screen capture'" class="thumbnail">
+            <div class="project-text">
+                <h3 class="project-title">
+                    <a [href]="project.url" class="project-link" target="_blank">
+                        {{ project.title }}
+                        <svg class="new-tab" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                            <path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/>
+                        </svg>
+                    </a>
+                </h3>
+                <p class="project-desc">
+                    {{  project.description }}
+                </p>
+                <div class="pill-container" *ngIf="checkTechnologiesArray(project)">
+                    <span *ngFor="let tech of project.technologies" class="tech-pill">{{ tech }}</span>
+                </div>
             </div>
-        </div>
-    </li>
-</ul>
+        </li>
+    </ul>
+</section>
