--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <app-hero></app-hero>
 <app-experience></app-experience>
+<app-section-seperator></app-section-seperator>
 <app-projects></app-projects>
