--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -9,8 +9,8 @@
     flex-direction: column;
     width: fit-content;
     margin-inline: auto;
-    margin-top: 32px;
-    margin-bottom: 64px;
+    margin-top: 64px;
+    margin-bottom: 100px;
 }
 
 .experience-wrapper {
@@ -44,6 +44,14 @@
         .thumbnail {
             border-color: rgba(226, 232, 240, .3);;
         }
+    }
+
+    &:first-child {
+        margin-top: 0;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
     }
 }
 
