Mouse glow and cleared up CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<app-mouse-glow></app-mouse-glow>
 <app-navbar></app-navbar>
 <app-hero></app-hero>
 <app-experience></app-experience>
 <app-section-seperator></app-section-seperator>
 <app-projects></app-projects>
+<app-footer></app-footer>
