--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -24,7 +24,7 @@
     transition-duration: .25s;
     transition-timing-function: cubic-bezier(.4, 0, .2, 1);
     transition-property: all;
-    border: 1px solid var(--body-background);
+    border: 1px solid var(--body-color-high-opac);
     border-radius: 8px;
     cursor: pointer;
 
