--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
     --body-background: #121217;
+    --body-color-high-opac: rgba(18, 18, 23, .001);
     --white: white;
     --black: black;
     --body-text: #b3b3b3;
@@ -8,12 +9,14 @@
     --teal-500: #33ffcf;
     --dark-teal: rgba(45, 212, 191, .1);
     --dark-gray: rgb(94, 96, 99);
+    --test-blue: rgb(29, 78, 216, 0.15)
 }
 
 body {
     background-color: var(--body-background);
     color: var(--white);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
 }
 
 a {
