--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="footer-wrapper">
+    <div class="spacer left"></div>
+    <div class="footer-content">
+        Coded in <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a> by 
+        myself. Built with <a href="https://v17.angular.io/docs" target="_blank">Angularv17</a> and 
+        <a href="https://sass-lang.com/" target="_blank">SCSS</a>, deployed with 
+        <a href="https://vercel.com/" target="_blank">Vercel</a>. All text is set in the 
+        <a href="https://css-tricks.com/snippets/css/system-font-stack/" target="_blank">system-ui</a> 
+        font stack.
+    </div>
+    <div class="spacer right"></div>
+</footer>
