--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-experience></app-experience>
 <app-section-seperator></app-section-seperator>
 <app-projects></app-projects>
+<app-contact-form></app-contact-form>
 <app-footer></app-footer>
