--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
             <a href="/#about">About</a>
             <a href="/#experience">Experience</a>
             <a href="/#projects">Projects</a>
+            <a href="/#contact-me">Contact Me</a>
         </nav>
     </div>
 </div>
