--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --body-background: #121217;
+    --dark-background: #121217;
+    --form-background: #191920;
     --body-color-high-opac: rgba(18, 18, 23, .001);
     --white: white;
     --black: black;
     --body-text: #b3b3b3;
     --outline: #2d2d39;
     --teal-500: #33ffcf;
+    --teal-700: #00e6b0;
+    --teal-900: #009a75;
     --dark-teal: rgba(45, 212, 191, .1);
     --dark-gray: rgb(94, 96, 99);
     --test-blue: rgb(29, 78, 216, 0.15)
+    --scrollbar-track: #232E33;
+    --scrollbar-thumb: #a2a2a2;
 }
 
 body {
-    background-color: var(--body-background);
+    background-color: var(--dark-background);
     color: var(--white);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-x: hidden;
