--- a/src/app/components/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-form/contact-form.component.scss
@@ -170,6 +170,7 @@ textarea {
     border-radius: 1000px;
     padding: 16px 24px;
     border: 0;
+    cursor: pointer;
 
     font-size: 1.2rem;
     font-weight: 500;
