Finished layout - so far

--- a/src/app/components/description/description.component.html
+++ b/src/app/components/description/description.component.html
@@ -1,2 +1,6 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis mollitia voluptas quae 
-    rem consectetur quaerat iste explicabo quidem aliquid. Temporibus.</p>
+<p>
+    Trained Fullstack software developer with three years of experience in developing business
+    applications. My focus is on Frontend development, as this is my primary area of interest.
+    I am well-versed in concepts like UI, UX, and accessibility. I have extensive knowledge in
+    creating development concepts, project management, and preparing user documenation.
+</p>
