--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
     --dark-background: #121217;
     --form-background: #191920;
     --body-color-high-opac: rgba(18, 18, 23, .001);
+    --high-opac: rgba(255, 255, 255, 0.02);
     --white: white;
     --black: black;
     --body-text: #b3b3b3;
