--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="button-container">
-            <button class="submit-btn" type="submit">Send</button>
+            <button class="submit-btn" type="submit">Send Mail</button>
         </div>
     </form>
 </section>
