--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<section class="navbar">
     <div class="nav-content">
         <a href="/">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300" class="logo">
@@ -21,4 +21,4 @@
             <a href="/#contact-me">Contact Me</a>
         </nav>
     </div>
-</div>
+  </section>
