--- a/src/app/components/contact-form/contact-form.component.scss
+++ b/src/app/components/contact-form/contact-form.component.scss
@@ -15,7 +15,7 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 32px;
+    gap: 40px;
     min-width: 800px;
 
     background-color: var(--high-opac);
@@ -111,10 +111,10 @@ textarea {
 .input:focus + .label {
     line-height: normal;
     font-size: .8rem;
-    top: -10px;
+    top: -8px;
     left: 30px;
     z-index: 3;
-    background: var(--form-background);
+    background: var(--dark-background);
     padding: 0 8px;
     border-radius: 10px;
 }
@@ -122,12 +122,13 @@ textarea {
 .input:not(:placeholder-shown) + .label {
     line-height: normal;
     font-size: .8rem;
-    top: -10px;
+    top: -8px;
     left: 30px;
     z-index: 3;
-    background: var(--form-background);
+    background: var(--dark-background);
     padding: 0 8px;
     border-radius: 10px;
+    border: 1px solid var(--outline);
 }
 
 .message-field > textarea {
@@ -183,6 +184,7 @@ textarea {
 }
 
 .error-message {
+    position: absolute;
     margin-left: 30px;
     color: var(--warning-color);
 }
