--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
     --scrollbar-thumb: #a2a2a2;
     --error-color: #ff3363;
     --warning-color: #ff6933;
+    --accent-color: #00a9e6;
   }
 
 body {
@@ -25,6 +26,16 @@ body {
     color: var(--white);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-x: hidden;
+}
+
+::-moz-selection { /* Code for Firefox */
+  color: var(--black);
+  background: var(--teal-700);
+}
+
+::selection {
+  color: var(--black);
+  background: var(--teal-700);
 }
 
 a {
