--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url(../../../assets/bg-flare.webp);
+    background-image: url(../../../assets/bg-flare-hero.png);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: auto;
