--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,24 +1,37 @@
 <section class="navbar">
-    <div class="nav-content">
-        <a href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300" class="logo">
-                <rect fill="transparent" x="0" y="0" width="300px" height="300px" class="logo-background-square"></rect>
-                <defs>
-                  <linearGradient id="gradient" gradientTransform="rotate(25)" x1="0%" y1="0%" x2="100%" y2="0%">
-                    <stop offset="0%" stop-color="#177775" stop-opacity="1"></stop>
-                    <stop offset="100%" stop-color="#33ffcf" stop-opacity="1"></stop>
-                  </linearGradient>
-                </defs>
-                <g fill="url(#gradient)" transform="matrix(13.431,0,0,13.431,35.836,33.822)">
-                  <path d="M0.31 11.96C1.15 12.98 2.52 13.66 4.16 13.66C6.40 13.66 7.73 12.70 7.73 10.96C7.73 9.60 7.10 8.78 5.14 8.34L3.64 8.01C2.18 7.67 1.82 7.11 1.82 6.26C1.82 5.46 2.28 4.47 4.17 4.47C5.36 4.47 6.34 4.94 6.93 5.61L7.55 4.94C6.61 3.95 5.50 3.64 4.24 3.64C2.04 3.64 0.87 4.68 0.87 6.34C0.87 7.57 1.50 8.48 3.07 8.83L4.52 9.17C6.41 9.59 6.76 10.21 6.76 11.06C6.76 11.87 6.27 12.82 4.23 12.82C2.86 12.82 1.67 12.22 0.98 11.33ZM16.69 13.50L14.35 9.25C14.49 9.23 14.60 9.18 14.71 9.14C15.75 8.75 16.35 7.91 16.35 6.58C16.35 5.28 15.75 4.30 14.43 3.98C14.04 3.88 13.15 3.82 12.39 3.82L9.53 3.82L9.53 13.50L10.42 13.50L10.42 9.45L12.35 9.45C12.71 9.45 13.09 9.44 13.45 9.39L15.65 13.50ZM10.42 8.60L10.42 4.68L12.43 4.68C12.88 4.68 13.59 4.70 13.94 4.76C14.90 4.94 15.37 5.61 15.37 6.61C15.37 7.45 14.97 8.11 14.31 8.34C13.87 8.50 13.12 8.60 12.49 8.60Z"></path>
-                </g>
-              </svg>              
-        </a>
-        <nav class="nav-menu">
-            <a href="/#about">About</a>
-            <a href="/#experience">Experience</a>
-            <a href="/#projects">Projects</a>
-            <a href="/#contact-me">Contact Me</a>
-        </nav>
+    <div class="nav-content" [class.mobile-nav-container]="!collapsed">
+        <div class="responsive-wrapper">
+          <a href="/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 300" class="logo">
+                  <rect fill="transparent" x="0" y="0" width="300px" height="300px" class="logo-background-square"></rect>
+                  <defs>
+                    <linearGradient id="gradient" gradientTransform="rotate(25)" x1="0%" y1="0%" x2="100%" y2="0%">
+                      <stop offset="0%" stop-color="#177775" stop-opacity="1"></stop>
+                      <stop offset="100%" stop-color="#33ffcf" stop-opacity="1"></stop>
+                    </linearGradient>
+                  </defs>
+                  <g fill="url(#gradient)" transform="matrix(13.431,0,0,13.431,35.836,33.822)">
+                    <path d="M0.31 11.96C1.15 12.98 2.52 13.66 4.16 13.66C6.40 13.66 7.73 12.70 7.73 10.96C7.73 9.60 7.10 8.78 5.14 8.34L3.64 8.01C2.18 7.67 1.82 7.11 1.82 6.26C1.82 5.46 2.28 4.47 4.17 4.47C5.36 4.47 6.34 4.94 6.93 5.61L7.55 4.94C6.61 3.95 5.50 3.64 4.24 3.64C2.04 3.64 0.87 4.68 0.87 6.34C0.87 7.57 1.50 8.48 3.07 8.83L4.52 9.17C6.41 9.59 6.76 10.21 6.76 11.06C6.76 11.87 6.27 12.82 4.23 12.82C2.86 12.82 1.67 12.22 0.98 11.33ZM16.69 13.50L14.35 9.25C14.49 9.23 14.60 9.18 14.71 9.14C15.75 8.75 16.35 7.91 16.35 6.58C16.35 5.28 15.75 4.30 14.43 3.98C14.04 3.88 13.15 3.82 12.39 3.82L9.53 3.82L9.53 13.50L10.42 13.50L10.42 9.45L12.35 9.45C12.71 9.45 13.09 9.44 13.45 9.39L15.65 13.50ZM10.42 8.60L10.42 4.68L12.43 4.68C12.88 4.68 13.59 4.70 13.94 4.76C14.90 4.94 15.37 5.61 15.37 6.61C15.37 7.45 14.97 8.11 14.31 8.34C13.87 8.50 13.12 8.60 12.49 8.60Z"></path>
+                  </g>
+                </svg>
+          </a>
+          <nav class="nav-menu">
+              <a href="/#about">About</a>
+              <a href="/#experience">Experience</a>
+              <a href="/#projects">Projects</a>
+              <a href="/#contact-me">Contact Me</a>
+          </nav>
+          <div class="mobile-menu" (click)="openNav()" [ngClass]="collapsed ? '' : 'open-menu'">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" fill="#e8eaed" class="burger-menu">
+              <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+            </svg>
+          </div>
+        </div>
+        <nav class="hide" [class.mobile-nav-menu]="!collapsed">
+          <a href="/#about" (click)="openNav()">About</a>
+          <a href="/#experience" (click)="openNav()">Experience</a>
+          <a href="/#projects" (click)="openNav()">Projects</a>
+          <a href="/#contact-me" (click)="openNav()">Contact Me</a>
+      </nav>
     </div>
   </section>
