--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -38,6 +38,13 @@
     padding: 24px 48px;
 
     display: flex;
+
+    .responsive-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
 }
 
 .nav-menu {
@@ -64,4 +71,64 @@ a {
         color: var(--teal-500);
     }
 
+}
+
+.burger-menu {
+    width: 3.5rem;
+}
+
+.mobile-menu,
+.mobile-nav-menu,
+.hide {
+    display: none;
+}
+
+@media screen and (max-width: 479px) {    
+    .nav-menu {
+        display: none;
+        transition: all, transform 400ms;
+        transform: translateY(0px) translateX(0px);
+    }
+
+    .mobile-nav-container {
+        -webkit-backdrop-filter: blur(24px);
+        backdrop-filter: blur(24px);
+        background-color: #1212171f;
+        border-radius: 40px;
+
+        align-items: normal;
+        flex-wrap: wrap;
+        height: 100vh;
+
+        .responsive-wrapper {
+            align-items: normal;
+        }
+
+        .logo {
+            margin-bottom: auto;
+        }
+
+        .mobile-nav-menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            gap: 4rem;
+
+            font-size: 2rem;
+            font-weight: 600;
+        }
+    }
+
+    .open-menu {
+        display: block;
+    }
+
+    .mobile-menu {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+    }
 }
