--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -18,3 +18,10 @@
 #about {
     scroll-margin-top: 120px;
 }
+
+@media screen and (max-width: 479px) {  
+    .hero {
+        flex-direction: column;
+        gap: 32px;
+    }
+}
