--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -37,6 +37,13 @@ footer {
 
         &::selection {
             text-decoration: underline;
-      }
+        }
     }
-  }
+}
+
+@media screen and (max-width: 479px) {
+    .left,
+    .right {
+        width: 0;
+    }
+}
