--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
         myself. Built with <a href="https://v17.angular.io/docs" target="_blank">Angularv17</a> and 
         <a href="https://sass-lang.com/" target="_blank">SCSS</a>, deployed with 
         <a href="https://vercel.com/" target="_blank">Vercel</a>. Email service possible thanks to
-        <a href="https://www.emailjs.com/">EmailJS</a>. All text is set in the 
+        <a href="https://www.emailjs.com/" target="_blank">EmailJS</a>. All text is set in the 
         <a href="https://css-tricks.com/snippets/css/system-font-stack/" target="_blank">system-ui</a> 
         font stack.
     </div>
