--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,4 +1,5 @@
 <section id="experience">
+    <h2 class="exp-headline">Experience</h2>
     <ul class="experiences">
         <li class="experience-wrapper" *ngFor="let experience of experiences" (click)="openNewTab(experience.url)">
             <div class="time-range"> {{ experience.dateRange }}</div>
