--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -1,5 +1,15 @@
 #experience {
     scroll-margin-top: 120px;
+    position: relative;
+}
+
+.exp-headline {
+    color: var(--dark-teal);
+    font-size: 4rem;
+    font-weight: 700;
+    position: absolute;
+    top: -30px;
+    left: 30%;
 }
 
 .experiences {
@@ -137,4 +147,11 @@ ul {
     
     font-weight: 500;
     font-size: .75rem;
+}
+
+@media screen and (max-width: 479px) {  
+    .exp-headline {
+        left: 50%;
+        transform: translate(-50%);
+    }
 }
