--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,4 +1,5 @@
 <section id="projects">
+    <h2 class="projects-headline">Projects</h2>
     <ul class="projects">
         <li class="project-wrapper" *ngFor="let project of projects" (click)="openNewTab(project.url)">
             <img [src]="project.image" [alt]="project.title +  ' screen capture'" class="thumbnail">
