--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -52,7 +52,7 @@
         }
 
         .thumbnail {
-            border-color: rgba(226, 232, 240, .3);;
+            border-color: rgba(226, 232, 240, .3);
         }
     }
 
@@ -110,11 +110,61 @@ ul {
 .thumbnail {
     border: 2px solid rgba(226, 232, 240, .1);
     border-radius: .25rem;
-    transform: matrix(1, 0, 0, 1, 0, 4);
+    // transform: matrix(1, 0, 0, 1, 0, 4);
     transition-duration: 0.15s;
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     width: 200px;
+
+    &:hover {
+        animation: pulsate 2s forwards;
+    }
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 80vw;
+}
+
+.close {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+}
+  
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+}
+
+.modal-content {  
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
 
 .pill-container {
@@ -157,4 +207,29 @@ ul {
             margin-top: 32px;
         }
     }
+}
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(226,232,240,0.5);
+    }
+    90% {
+        transform: scale(1.05);
+        box-shadow: 0 0 10px 5px rgba(226,232,240,0.5);
+    }
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(226,232,240,0.5);
+    }
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
 }
